--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>طلب رمز الاقتران</title>
 <style>
-    body { font-family: Arial; background:#f9f9f9; text-align:center; margin-top:50px; }
-    h1 { color:#333; }
-    input { padding:10px; width:250px; font-size:18px; border-radius:5px; border:1px solid #ccc; }
-    button { padding:10px 20px; font-size:18px; margin-top:10px; border:none; border-radius:5px; background:#28a745; color:#fff; cursor:pointer; }
+    body { font-family: Arial; background:#f3f4f6; display:flex; justify-content:center; align-items:center; height:100vh; margin:0; }
+    .card { background:#fff; padding:30px; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.1); text-align:center; width:350px; }
+    input { width:90%; padding:10px; margin-top:10px; border:1px solid #ccc; border-radius:5px; font-size:16px; }
+    button { background:#28a745; color:#fff; border:none; padding:10px 20px; margin-top:15px; font-size:16px; border-radius:5px; cursor:pointer; }
     button:hover { background:#218838; }
-    #result { margin-top:20px; font-size:20px; color:#333; font-weight:bold; }
+    #result { margin-top:15px; font-size:18px; color:#333; }
 </style>
 </head>
 <body>
-    <h1>أدخل رقم هاتفك</h1>
-    <input type="text" id="number" placeholder="+966xxxxxxxxx"><br><br>
-    <button onclick="getCode()">توليد رمز الاقتران</button>
+<div class="card">
+    <h2>أدخل رقمك لتوليد الرمز</h2>
+    <input type="text" id="number" placeholder="+966xxxxxxxxx"><br>
+    <button onclick="getCode()">توليد الرمز</button>
     <div id="result"></div>
-
+</div>
 <script>
 async function getCode() {
     const number = document.getElementById('number').value;
@@ -36,7 +37,7 @@ async function getCode() {
     if(data.code) {
         document.getElementById('result').innerText = '✅ رمز الاقتران: ' + data.code;
     } else {
-        document.getElementById('result').innerText = '❌ حدث خطأ: ' + (data.error || 'حاول لاحقاً');
+        document.getElementById('result').innerText = '❌ خطأ: ' + (data.error || 'حاول لاحقاً');
     }
 }
 </script>
