--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,18 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>طلب رمز الاقتران</title>
-<style>
-    body { font-family: Arial; background:#f3f4f6; display:flex; justify-content:center; align-items:center; height:100vh; margin:0; }
-    .card { background:#fff; padding:30px; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.1); text-align:center; width:350px; }
-    input { width:90%; padding:10px; margin-top:10px; border:1px solid #ccc; border-radius:5px; font-size:16px; }
-    button { background:#28a745; color:#fff; border:none; padding:10px 20px; margin-top:15px; font-size:16px; border-radius:5px; cursor:pointer; }
-    button:hover { background:#218838; }
-    #result { margin-top:15px; font-size:18px; color:#333; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>توليد رمز اقتران واتساب</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="card">
-    <h2>أدخل رقمك لتوليد الرمز</h2>
-    <input type="text" id="number" placeholder="+966xxxxxxxxx"><br>
-    <button onclick="getCode()">توليد الرمز</button>
+  <div class="container">
+    <h1>توليد رمز اقتران واتساب</h1>
+    <input type="text" id="number" placeholder="أدخل رقم الهاتف مع رمز الدولة">
+    <button onclick="generateCode()">توليد الرمز</button>
     <div id="result"></div>
-</div>
-<script>
-async function getCode() {
-    const number = document.getElementById('number').value;
-    if(!number) {
-        document.getElementById('result').innerText = '❌ أدخل رقم الهاتف';
-        return;
-    }
-    document.getElementById('result').innerText = '⏳ جاري توليد الرمز...';
-    const res = await fetch('/pair', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ number })
-    });
-    const data = await res.json();
-    if(data.code) {
-        document.getElementById('result').innerText = '✅ رمز الاقتران: ' + data.code;
-    } else {
-        document.getElementById('result').innerText = '❌ خطأ: ' + (data.error || 'حاول لاحقاً');
-    }
-}
-</script>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
